# devops_ex

./: .gitignore  .vercelignore  Dockerfile  devenv.nix  devenv.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
.github/workflows/: ci.yml
app/: main.py
terraform/: README.md
terraform/environments/development/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/environments/production/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/environments/staging/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs-service/: main.tf  outputs.tf  variables.tf
terraform/modules/network/: variables.tf
tests/: test_main.py
