[project]
name = "devops-ex"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.136.1",
  "uvicorn==0.46.0",
  "python-jose[cryptography]==3.5.0",
  "pydantic>=2.0.0"
]

[project.scripts]
app = "app.main:app"

[tool.vercel]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
pythonpath = ["."]
